# P2PDesk

./: .gitignore  CMakeLists.txt  LauncherWindow.h  Makefile  README.md  client.cpp  main.cpp  readme_en.md  server.cpp
client_gui/: ClientComponents.cpp  ClientComponents.h  MainWindow.cpp  MainWindow.h  main.cpp
common/: H265Codec.cpp  H265Codec.h  protocol.h
server_gui/: MainWindow.cpp  MainWindow.h  ServerComponents.cpp  ServerComponents.h  main.cpp
